# VoiceDictation

./: .gitignore  .ignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  plan.md
.github/workflows/: release.yml
docs/: checklist.md  env.md  macos-globe.md  permissions.md  plan.md  release.md
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: app_state.rs  audio.rs  azure_transcribe.rs  config.rs  insert.rs  lib.rs  logger.rs  main.rs  tray.rs
src-tauri/src/key_listener/: macos.rs  mod.rs  windows.rs
