[package]
name = "voice-dictation"
version = "0.1.0"
description = "VoiceDictation - Speech-to-text tool"
authors = ["intzero"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voice_dictation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-opener = "2"
cpal = "0.15.3"
crossbeam-channel = "0.5.15"
hound = "3.5.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "multipart", "rustls-tls"] }
arboard = "3.6.1"
core-foundation = "0.10.1"
core-graphics = "0.24.0"
image = "0.25.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
